# static

sourceForge/csdemo/: Makefile.am  auto.sh  configure.ac  configure.scan
sourceForge/csdemo/autom4te.cache/: output.0  requests  traces.0
sourceForge/csdemo/doc/: README
sourceForge/csdemo/makeconfig/: make.global
sourceForge/csdemo/src/: Makefile.am
sourceForge/csdemo/src/alge/: Makefile.am  alge.c  alge.h
sourceForge/csdemo/src/alge/.deps/: alge.Plo  alge.Po  lcd.Plo  lcd.Po
sourceForge/csdemo/src/alge/.libs/: alge.gcda  alge.gcno  libalge.la
sourceForge/csdemo/src/apps/: Makefile.am  csrun.c
sourceForge/csdemo/src/apps/.deps/: csrun-csrun.Po  mp3-player.Po
sourceForge/csdemo/src/base/: Makefile.am  addfld.f90  paramx.f90
sourceForge/csdemo/src/bft/: Makefile.am  bft.c  bft.h
sourceForge/csdemo/src/bft/.deps/: bft.Po  media.Po
sourceForge/csdemo/src/cdo/: Makefile.am  cdo.c  cdo.h
sourceForge/csdemo/src/cdo/.deps/: cdo.Po  libusb_a-usb.Po
sourceForge/csdemo/src/cogz/: Makefile.am  matmul.f90
sourceForge/csdemo/src/comb/: Makefile.am  comb.c  comb.h
sourceForge/csdemo/src/comb/.deps/: comb.Po
