#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(csrun, 1.0, adi@adi.com)
AC_CONFIG_SRCDIR([src/apps/csrun.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE[foreign tar-pax]
# Checks for programs.
AC_PROG_CC
AC_PROG_FC

# Checks for libraries.

# Checks for header files.
AC_PROG_RANLIB

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
				 src/apps/Makefile
				 src/alge/Makefile
                 src/base/Makefile
                 src/bft/Makefile
				 src/cdo/Makefile
                 src/comb/Makefile
				 src/cogz/Makefile])
AC_OUTPUT
